{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 135,
  "lineage": "89d21421-bd72-2649-99c2-f56e97c36c5d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "netflix_ec2_docker_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:484907518161:instance/i-05cdb1fa16a5cf03b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cdb1fa16a5cf03b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "virginia",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0142de6789c3207be",
            "private_dns": "ip-10-0-1-61.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.61",
            "public_dns": "ec2-18-235-147-225.compute-1.amazonaws.com",
            "public_ip": "18.235.147.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bd677b56947669a5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f59354ea57b78e46",
            "tags": {
              "Name": "netflix-ec2-docker-jenkins"
            },
            "tags_all": {
              "Name": "netflix-ec2-docker-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c29389fd634427b1"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.netflix_sg",
            "module.vpc.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "netflix_ec2_grafana_prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:484907518161:instance/i-050c068191e431de9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050c068191e431de9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "virginia",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02dd5afbc9e5c0818",
            "private_dns": "ip-10-0-1-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.109",
            "public_dns": "ec2-34-193-207-1.compute-1.amazonaws.com",
            "public_ip": "34.193.207.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03c3f35c6e3e20fea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f59354ea57b78e46",
            "tags": {
              "Name": "netflix-ec2-grafana-prometheus"
            },
            "tags_all": {
              "Name": "netflix-ec2-grafana-prometheus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c29389fd634427b1"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.netflix_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.netflix_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "netflix_eip_docker_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05397424e30b8b26e",
            "arn": "arn:aws:ec2:us-east-1:484907518161:elastic-ip/eipalloc-05397424e30b8b26e",
            "association_id": "eipassoc-0012b982a43a1c267",
            "domain": "vpc",
            "id": "eipalloc-05397424e30b8b26e",
            "instance": "i-05cdb1fa16a5cf03b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0142de6789c3207be",
            "private_dns": "ip-10-0-1-61.ec2.internal",
            "private_ip": "10.0.1.61",
            "public_dns": "ec2-18-235-147-225.compute-1.amazonaws.com",
            "public_ip": "18.235.147.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "netflix-eip-docker-jenkins"
            },
            "tags_all": {
              "Name": "netflix-eip-docker-jenkins"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_instance.netflix_ec2_docker_jenkins",
            "module.vpc.aws_security_group.netflix_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.netflix_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "netflix_eip_grafana_prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a80a81ec9c386d2f",
            "arn": "arn:aws:ec2:us-east-1:484907518161:elastic-ip/eipalloc-0a80a81ec9c386d2f",
            "association_id": "eipassoc-09d7c1d2b083cdd36",
            "domain": "vpc",
            "id": "eipalloc-0a80a81ec9c386d2f",
            "instance": "i-050c068191e431de9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02dd5afbc9e5c0818",
            "private_dns": "ip-10-0-1-109.ec2.internal",
            "private_ip": "10.0.1.109",
            "public_dns": "ec2-34-193-207-1.compute-1.amazonaws.com",
            "public_ip": "34.193.207.1",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "netflix-eip-grafana-prometheus"
            },
            "tags_all": {
              "Name": "netflix-eip-grafana-prometheus"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_instance.netflix_ec2_grafana_prometheus",
            "module.vpc.aws_security_group.netflix_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.netflix_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "netflix_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907518161:internet-gateway/igw-0f061274d51ea50b5",
            "id": "igw-0f061274d51ea50b5",
            "owner_id": "484907518161",
            "tags": {
              "Name": "netflix-igw"
            },
            "tags_all": {
              "Name": "netflix-igw"
            },
            "vpc_id": "vpc-0d291a8ac8cce9783"
          },
          "dependencies": [
            "module.vpc.aws_vpc.netflix_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907518161:route-table/rtb-06362ffa9de006697",
            "id": "rtb-06362ffa9de006697",
            "owner_id": "484907518161",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f061274d51ea50b5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "netflix-public-rt"
            },
            "tags_all": {
              "Name": "netflix-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d291a8ac8cce9783"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.netflix_igw",
            "module.vpc.aws_vpc.netflix_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005a15d5ce869fc92",
            "route_table_id": "rtb-06362ffa9de006697",
            "subnet_id": "subnet-0f59354ea57b78e46"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.netflix_igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.netflix_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "netflix_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907518161:security-group/sg-0c29389fd634427b1",
            "description": "Security group for Netflix clone",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c29389fd634427b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Netflix",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SonarQube",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "netflix-sg",
            "name_prefix": "",
            "owner_id": "484907518161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "netflix-sg"
            },
            "tags_all": {
              "Name": "netflix-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d291a8ac8cce9783"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.netflix_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907518161:subnet/subnet-0f59354ea57b78e46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f59354ea57b78e46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484907518161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "netflix-public-subnet"
            },
            "tags_all": {
              "Name": "netflix-public-subnet"
            },
            "vpc_id": "vpc-0d291a8ac8cce9783"
          },
          "dependencies": [
            "module.vpc.aws_vpc.netflix_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netflix_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907518161:vpc/vpc-0d291a8ac8cce9783",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf1424ee489bf57f",
            "default_route_table_id": "rtb-0f70a59c3360b56f2",
            "default_security_group_id": "sg-0f677e3916f26b2eb",
            "dhcp_options_id": "dopt-004851b764baa92eb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d291a8ac8cce9783",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f70a59c3360b56f2",
            "owner_id": "484907518161",
            "tags": {
              "Name": "netflix-vpc"
            },
            "tags_all": {
              "Name": "netflix-vpc"
            }
          }
        }
      ]
    }
  ]
}